--- a/trunk/trunk/Framework/Game/Game/Game.csproj
+++ b/trunk/trunk/Framework/Game/Game/Game.csproj
@@ -129,7 +129,9 @@
     <Compile Include="app\Res.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputHelper.cs" />
     <Compile Include="NativeApp.cs" />
+    <Compile Include="NativeInput.cs" />
     <Compile Include="TestGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
