--- a/trunk/trunk/Framework/AsapXna/AsapXna.csproj
+++ b/trunk/trunk/Framework/AsapXna/AsapXna.csproj
@@ -92,7 +92,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="asap\anim\IMovieClip.cs" />
+    <Compile Include="asap\anim\IMovieControl.cs" />
     <Compile Include="asap\anim\objects\BitmapInstance.cs" />
     <Compile Include="asap\anim\objects\CharacterConstansts.cs" />
     <Compile Include="asap\anim\objects\CharacterInstance.cs" />
